se entrega repaso 2
funcionando

--- a/practica8/app.json
+++ b/practica8/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/galaxia.jpeg",
+      "image": "./assets/background.jpeg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
